--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/DressShopWebUI.csproj
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/DressShopWebUI.csproj
@@ -128,6 +128,7 @@
     <Content Include="img\headerpattern.png" />
     <Content Include="img\insta.png" />
     <Content Include="img\knopka.gif" />
+    <Content Include="img\logo.jpg" />
     <Content Include="img\logo.png" />
     <Content Include="img\minus.png" />
     <Content Include="img\nizkoma.png" />
@@ -155,6 +156,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="fonts\segoeuil.ttf" />
+    <Content Include="fonts\shrift.ttf" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
