--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/DressShopWebUI.csproj
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/DressShopWebUI.csproj
@@ -137,6 +137,8 @@
     <Content Include="img\patern.png" />
     <Content Include="img\plus.png" />
     <Content Include="img\shoplogo.png" />
+    <Content Include="img\smailOk.png" />
+    <Content Include="img\smailBad.png" />
     <Content Include="img\stars.png" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -145,21 +147,35 @@
     <Content Include="img\verchkoma.png" />
     <Content Include="img\zirka.png" />
     <Content Include="img\zirkap.png" />
-    <Content Include="PhotoForDB\dress1.jpg" />
-    <Content Include="PhotoForDB\dress10.jpg" />
-    <Content Include="PhotoForDB\dress2.jpg" />
-    <Content Include="PhotoForDB\dress3.jpg" />
-    <Content Include="PhotoForDB\dress4.jpg" />
-    <Content Include="PhotoForDB\dress5.jpg" />
-    <Content Include="PhotoForDB\dress6.jpg" />
-    <Content Include="PhotoForDB\dress7.jpg" />
-    <Content Include="PhotoForDB\dress8.jpg" />
-    <Content Include="PhotoForDB\dress9.jpg" />
+    <Content Include="PhotoForDB\g1.jpg" />
+    <Content Include="PhotoForDB\g2.jpg" />
+    <Content Include="PhotoForDB\g3.jpg" />
+    <Content Include="PhotoForDB\g4.jpg" />
+    <Content Include="PhotoForDB\g5.jpg" />
+    <Content Include="PhotoForDB\g6.jpg" />
+    <Content Include="PhotoForDB\g7.jpg" />
+    <Content Include="PhotoForDB\g8.jpg" />
+    <Content Include="PhotoForDB\g9.jpg" />
+    <Content Include="PhotoForDB\p1.jpg" />
+    <Content Include="PhotoForDB\p2.jpg" />
+    <Content Include="PhotoForDB\p3.jpg" />
+    <Content Include="PhotoForDB\p4.jpg" />
+    <Content Include="PhotoForDB\s1.jpg" />
+    <Content Include="PhotoForDB\s2.jpg" />
+    <Content Include="PhotoForDB\s3.jpg" />
+    <Content Include="PhotoForDB\s4.jpg" />
+    <Content Include="PhotoForDB\s5.jpg" />
+    <Content Include="PhotoForDB\s6.jpg" />
+    <Content Include="PhotoForDB\s7.jpg" />
+    <Content Include="PhotoForDB\s8.jpg" />
+    <Content Include="PhotoForDB\s9.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="fonts\segoeuil.ttf" />
     <Content Include="fonts\b52_2d0a8eb1572d73815cd2d3ef3196c48b.ttf" />
     <Content Include="fonts\b52_2d0a8eb1572d73815cd2d3ef3196c48b.woff" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\CustomProfile1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
